Changes to everything

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -208,4 +208,10 @@
   issn      = {1063-6919},
 }
 
+@InProceedings{Singh2011DIGITRS,
+  author = {Devinder Singh and Baljit Singh Khehra},
+  title  = {DIGIT RECOGNITION SYSTEM USING BACK PROPAGATION NEURAL NETWORK},
+  year   = {2011},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
